--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,8 @@
   </properties>
 
   <build>
+    <finalName>${project.artifactId}</finalName>
+
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
