--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>org.acerbulescu</groupId>
   <artifactId>mcdockerseer</artifactId>
-  <version>1.3.0</version>
+  <version>1.3.1</version>
 
   <properties>
     <java.version>11</java.version>
@@ -66,6 +66,13 @@
       <version>3.0.6</version>
     </dependency>
     <dependency>
+      <groupId>com.google.code.findbugs</groupId>
+      <artifactId>jsr305</artifactId>
+      <version>3.0.2</version>
+    </dependency>
+
+    <!--    spring related dependencies-->
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
       <version>2.7.7</version>
@@ -101,7 +108,6 @@
       <artifactId>spring-websocket</artifactId>
       <version>${spring.version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-messaging</artifactId>
